# smairt-toolkit

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  LICENSE  QUICKSTART.md  README.md  REPO_MAP.md  SECURITY.md  SMAIRT_ABSTRACT.md  SUPPORT.md  TUTORIAL.md  TUTORIAL_HPC.md  TUTORIAL_PAPER_DRIVEN.md  cookiecutter.json  pyproject.toml  vfmini
.github/: CONTRIBUTING.md  RELEASE_CHECKLIST.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md  question.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: AI_SKILL_USAGE.md  ARCHITECTURE.md  ATTRIBUTIONS.md  CLI_REFERENCE.md  CONTEXT_AND_MODELS.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  HARNESSES.md  HPC.md  INSTALL.md  INTEGRATIONS.md  MODERNIZATION_PROPOSAL.md  README.md  RELEASE.md  SAFETY.md  SETUP_CONDA.md  SETUP_GIT_GITHUB.md  TERMINAL_COMPLETION.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/assets/: demo.cast
docs/concepts/: architecture.md  safety.md  scientific-workflow.md
docs/development/: developer-guide.md  release.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: hpc.md  integrations.md  research-workflow.md  troubleshooting.md
docs/harnesses/: antigravity-feasibility.md  claude-code.md  cline.md  codex.md  cursor.md  opencode.md  zoo-code.md
docs/plans/: SMAIRT_V1_IMPLEMENTATION.md  TUI_USABILITY.md
docs/reference/: cli.md  harnesses.md
docs/reference/harnesses/: claude-code.md  cline.md  codex.md  cursor.md  opencode.md  zoo-code.md
docs/specs/: SMAIRT_V1_SPEC.md
examples/enzyme-kinetics-demo/: ANALYSIS_ITERATION_001.md  README.md  analysis.py  data.csv  expected-results.json  initial_background.md  proposal_options.md  protocol.yaml  run-demo.sh
hooks/: post_gen_project.py  pre_gen_project.py
paper_draft/: SMAIRT_ABSTRACT.md  SMAIRT_Genesis_Transcript_2026_02_14.docx  SMAIRT_PAPER_DRIVEN_MODE.md  SMAIRT_PLOS_PAPER.md  TRANSCRIPT_INTEGRATION_ANALYSIS.md
scripts/: check_critical_coverage.py  validate_docs.py
skills/smairt-paper-driven/: SKILL.md
skills/smairt-paper-driven/agents/: openai.yaml
skills/smairt-paper-driven/references/: paper_driven_workflow.md
skills/smairt-research/: SKILL.md
skills/smairt-research/agents/: openai.yaml
skills/smairt-research/references/: workflow.md
src/smairt/: __init__.py  __main__.py  cli.py  cli_harness.py  cli_hpc.py  cli_integrations.py  cli_literature.py  cli_mcp.py  cli_publication.py  cli_references.py  cli_research.py  cli_safety.py  cli_shared.py  cli_state.py  code_quality.py  completion.py  contracts.py  corrections.py  credentials.py  diagnostics.py  errors.py  guidance.py  harness_presentation.py  harnesses.py  hook_policy.py  hpc.py  integrations.py  integrity.py  licenses.py  literature.py  local_setup.py  locking.py  mcp_server.py  migrations.py  model_policy.py  models.py  paper.py  project.py  provenance.py  references.py  (+14 more)
src/smairt/resources/: __init__.py  smairt-research.md  workflow.md
tests/: conftest.py  test_claude_v7.py  test_cli.py  test_cli_v2.py  test_docs.py  test_experimental_ux.py  test_guidance_and_upgrade.py  test_harness_v6.py  test_integrations_v4.py  test_literature_v7.py  test_production_readiness.py  test_properties.py  test_references.py  test_research_lifecycle.py  test_scaffold.py  test_settings_v3.py  test_tui.py  test_ux_v5.py  test_v2_foundations.py  test_v2_hardening.py  test_v8_features.py
{{ cookiecutter.project_slug }}/: FINAL_MANIFEST.md  README.md
{{ cookiecutter.project_slug }}/analysis/: ANALYSIS_PLAN.md  BREADCRUMB_TRAIL.md  README.md  REPOSITORY_PLAN.md
{{ cookiecutter.project_slug }}/analysis/XX_figures/: README.md
{{ cookiecutter.project_slug }}/background/: README.md
{{ cookiecutter.project_slug }}/docs/: 12_STEPS.md  BEST_PRACTICE.md  BEST_PRACTICE_COLLABORATIVE.md  BEST_PRACTICE_SINGLE.md  README.md  SMAIRT_PHILOSOPHY.md
{{ cookiecutter.project_slug }}/experiments/01_synthetic/: README.md
{{ cookiecutter.project_slug }}/experiments/02_downloaded/: README.md
{{ cookiecutter.project_slug }}/experiments/02_synthetic/: README.md
{{ cookiecutter.project_slug }}/experiments/03_real_data/: README.md
{{ cookiecutter.project_slug }}/hpc/: README.md  config.yaml
{{ cookiecutter.project_slug }}/hpc/logs/: README.md
{{ cookiecutter.project_slug }}/hypotheses/: README.md
{{ cookiecutter.project_slug }}/paper/: outline.md
{{ cookiecutter.project_slug }}/paper/drafts/: README.md
{{ cookiecutter.project_slug }}/paper/reviewer_feedback/: README.md
{{ cookiecutter.project_slug }}/paper_draft/: README.md
{{ cookiecutter.project_slug }}/prompts/: 00_priming_prompts.md  AI_CONTEXT.md  CODE_CONVENTIONS.md  InitialPrompt_paper_driven.md  KNOWN_PATTERNS.md  README.md  SESSION_START.md  figure_generation_prompt.md  intellectual_contribution.md  iteration_review_prompt.md  session_log.md
{{ cookiecutter.project_slug }}/results/figures/: README.md
{{ cookiecutter.project_slug }}/results/logs/: README.md
{{ cookiecutter.project_slug }}/scripts/: README.md  compile_for_ai.py  new_script.py
