[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "smairt"
version = "0.1.0"
description = "Scientific Method with AI Research Toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "PNNL Computational Biology contributors" }]
dependencies = [
  "jinja2>=3.1",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "rich>=13.9",
  "textual>=1.0",
  "typer>=0.15",
  "pypdf>=5.0",
]

[project.optional-dependencies]
dev = ["build>=1.2", "hatchling>=1.27", "pytest>=8.3", "pytest-cov>=6.0", "ruff>=0.9"]

[project.scripts]
smairt = "smairt.cli:app"

[project.urls]
Repository = "https://github.com/PNNL-CompBio/smairt-template"

[tool.hatch.build.targets.wheel]
packages = ["src/smairt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
